Added missed config

--- a/all-core/build.gradle
+++ b/all-core/build.gradle
@@ -75,3 +75,10 @@ grailsPublish {
 assets {
     packagePlugin = true
 }
+sourceSets {
+    main {
+        resources {
+            srcDir 'grails-app/migrations'
+        }
+    }
+}
