--- a/project-a/grails-app/conf/application.yml
+++ b/project-a/grails-app/conf/application.yml
@@ -126,3 +126,11 @@ environments:
                 testOnReturn: false
                 jdbcInterceptors: ConnectionState
                 defaultTransactionIsolation: 2 # TRANSACTION_READ_COMMITTED
+---
+grails:
+  plugin:
+    databasemigration:
+      updateOnStart: true
+      changelogFileName: 'changelog.groovy'
+      updateOnStartFileName: 'changelog.groovy'
+      changelogLocation: '../all-core/grails-app/migrations'
